tests/baselines/reference/checkSuperCallBeforeThisAccessing5.errors.txt
tests/cases/compiler/checkSuperCallBeforeThisAccessing5.ts(5,9): error TS17008: 'super' must be called before accessing 'this' in the constructor of a derived class.


==== tests/cases/compiler/checkSuperCallBeforeThisAccessing5.ts (1 errors) ====
    class Based { constructor(...arg) { } }
    class Derived extends Based {
        public x: number;
        constructor() {
            super(this.x);
            ~~~~~~~~~~~~~~
!!! error TS17008: 'super' must be called before accessing 'this' in the constructor of a derived class.
        }
    }